Fixed array-view negative value alignment issue

--- a/src/app/array-view/array-view.component.css
+++ b/src/app/array-view/array-view.component.css
@@ -5,6 +5,15 @@
   overflow: hidden;
 }
 
+.container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .array-container {
   position: relative;
   height: 100%;
@@ -17,6 +26,10 @@
 .array-container > div {
   flex: 1;
   position: relative;
+}
+
+.array-container-neg {
+  align-items: flex-start;
 }
 
 .value {
@@ -40,18 +53,10 @@
   transform: translate(-50%, 125%) rotate(-135deg);
 }
 
-.negative-value {
-  transform: translate(0, 100%);
-}
-
 .negative-value:after {
   bottom: 100%;
 }
 
-.zero-value {
-  height: 2px;
-  margin-bottom: -1px;
-}
 
 .sorted {
   background-color: green;
@@ -63,6 +68,10 @@
 
 .marked {
   background-color: orange;
+}
+
+.zero-value {
+  border-radius: 2px;
 }
 
 @keyframes fadeIn {
